hphp/hack/test/typecheck/fc_enum_3.php.rust_elab.exp
File "fc_enum_3.php", line 5, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_3.php", line 18, characters 9-16:
Invalid argument (Typing[4110])
  File "fc_enum_3.php", line 15, characters 16-18:
  Expected `int`
  File "fc_enum_3.php", line 5, characters 6-8:
  But got `arraykey` arising from an implicit `as arraykey` constraint on this type
